--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
         "build": "npm run production"
     },
     "dependencies": {
-        "@babel/preset-react": "^7.13.13",
         "@apollo/client": "^3.3.16",
+        "@babel/preset-react": "^7.13.13",
         "@shopify/app-bridge": "^2.0.2",
         "@shopify/app-bridge-react": "^2.0.2",
         "@shopify/app-bridge-utils": "^2.0.2",
@@ -21,10 +21,17 @@
         "graphql": "^15.5.0",
         "laravel-mix": "^6.0.19",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
-        "react": "^16.14.0",
-        "react-dom": "^16.14.0",
-        "react-router-dom": "^5.2.0"
+        "postcss": "^8.1.14"
     },
-    "devDependencies": {}
+    "devDependencies": {
+        "@popperjs/core": "^2.10.2",
+        "bootstrap": "^5.1.3",
+        "resolve-url-loader": "^4.0.0",
+        "sass": "^1.32.11",
+        "sass-loader": "^11.0.1",
+        "vue": "^2.6.12",
+        "vue-loader": "^17.0.0",
+        "vue-router": "^3.5.3",
+        "vue-template-compiler": "^2.6.12"
+    }
 }
