--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,20 @@
-APP_NAME="Shopify PHP App"
-APP_ENV=local
-APP_KEY=
-APP_DEBUG=true
-APP_URL=http://localhost
-
-LOG_CHANNEL=stack
-LOG_LEVEL=debug
-
-DB_CONNECTION=sqlite
-# The path to the database file should be absolute, make sure to update it!
-DB_DATABASE=storage/db.sqlite
-DB_FOREIGN_KEYS=true
-
 SHOPIFY_API_KEY=
 SHOPIFY_API_SECRET=
-SCOPES=
-HOST=
+SHOP=huyhuan.myshopify.com
+SCOPES=write_products,write_draft_orders,write_customers
+HOST=https://1d0f-2402-800-6294-4a1d-a637-aa6c-dc6a-d08e.ngrok.io
+ACCESS_TOKEN=
+APP_NAME="SHOPIFY LARAVEL APP"
+APP_ENV=local
+APP_KEY=base64:mc+BmOkg2qkZ8u4Rq8+MWr09nwieWusTH/jNH6+qX4o=
+APP_DEBUG=true
+APP_URL=https://app-allu.com
+LOG_CHANNEL=stack
+LOG_LEVEL=debug
+DB_FOREIGN_KEYS=true
+DB_CONNECTION=mysql
+DB_HOST=db_allu
+DB_PORT=3306
+DB_DATABASE=allu
+DB_USERNAME=root
+DB_PASSWORD=allu123
